# advent-of-code

./: .gitignore  .pylintrc  CMakeLists.txt  README.md  requirements.txt
c++/: CMakeLists.txt  template.cpp
c++/2022/: day1.cpp  day2.cpp
c++/infra/: read_input.cpp  read_input.h  report_times.cpp  report_times.h
c++/src/infra/: aoc_shared.h  read_input.cpp  read_input.h
c++/src/year2022/: day1.cpp
c++/src/year2024/: day7.cpp
c++/year2022/: day1.cpp  day2.cpp
c++/year2024/: day7.cpp
inputs/: download_inputs.py
python/: pyproject.toml  requirements.txt
python/2019/: day1.py  day2.py  day3.py
python/2020/: day2.py  day6.py
python/2021/: day1.py  day2.py
python/2022/: day1.py  day10.py  day11.py  day12.py  day15.py  day16.py  day2.py  day8.py
python/2023/: day1.py  day2.py  day5.py
python/infra/: __init__.py  data_reader.py
python/src/advent_of_code/infra/: __init__.py  constants.py  read_input.py  report_times.py
python/src/advent_of_code/year2019/: day3.py
python/src/advent_of_code/year2020/: day1.py  day2.py  day4.py  day5.py  day6.py
python/src/advent_of_code/year2021/: day2.py
python/src/advent_of_code/year2022/: day1.py  day10.py  day11.py  day12.py  day13.py  day15.py  day2.py  day6.py  day7.py  day8.py  day9.py
python/src/advent_of_code/year2023/: day1.py  day10.py  day11.py  day5.py  day6.py  day7.py  day8.py  day9.py
python/src/advent_of_code/year2025/: day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
python/src/infra/: constants.py  report_times.py
python/src/year2019/: day1.py  day2.py
python/src/year2020/: day3.py
python/src/year2021/: day1.py  day3.py
python/src/year2022/: day14.py  day16.py  day3.py  day4.py  day5.py
python/src/year2023/: day12.py  day2.py  day3.py  day4.py
python/src/year2024/: day1.py  day2.py
python/src/year2025/: day1.py  day2.py  day3.py  day4.py  day5.py
python/year2020/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py
python/year2021/: day1.py  day2.py  day3.py
python/year2022/: day1.py  day13.py  day14.py  day16.py  day3.py  day4.py  day5.py  day6.py  day7.py  day9.py
python/year2023/: day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
python/year2024/: day1.py  day2.py
python/year2025/: day1.py  day2.py  day3.py
rust/: Cargo.toml  template.rs
rust/2022/: day1.rs  day2.rs
rust/shared/: Cargo.toml
rust/shared/src/: lib.rs  map.rs  read_input.rs  report_times.rs
rust/year2022/: Cargo.toml
rust/year2024/: Cargo.toml  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/year2025/: Cargo.toml
src/infra/: api.py  data_reader.py
src/solutions/: d1_t1.py  d1_t2.py  d2_t1.py  d2_t2.py  d3_t1.py  d3_t2.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py
src/year2019/: day1.py  day2.py  day3.py
(+66 files in other folders)
