[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "22_d1"
path = "year2022/day1.rs"

[[bin]]
name = "22_d2"
path = "year2022/day2.rs"

[[bin]]
name = "24_d1"
path = "year2024/day1.rs"

[[bin]]
name = "24_d2"
path = "year2024/day2.rs"

[[bin]]
name = "24_d3"
path = "year2024/day3.rs"

[[bin]]
name = "24_d4"
path = "year2024/day4.rs"

[[bin]]
name = "24_d5"
path = "year2024/day5.rs"

[dependencies]
regex = "1.11.1"
simple-stopwatch = "0.1.4"
